<resources>
    <string name="app_name">OHO55</string>
    <string name="cancel">ยกเลิก</string>
    <string name="txt_save">ส่ง-พิมพ์</string>
    <string name="text_next">ข้าม</string>
    <string name="text_edit">แก้ไข</string>
    <string name="text_enter">ตกลง</string>
    <string name="text_add">เพิ่ม</string>
    <string name="text_number">กรุณากรอก</string>
    <string name="menu1">Menu1</string>
    <string name="menu2">Menu2</string>
    <string name="menu3">Menu3</string>
    <string name="title_hint_user">ชื่อผู้ใช้งาน</string>
    <string name="title_hint_pass">รหัสผ่าน</string>
    <string name="title_ok">ตกลง</string>
    <string name="size_dialog_ok">18</string>
    <string name="size_dialog_button">16</string>
    <string name="size_padding_tb_dialog">15</string>
    <string name="textadd">\@</string>
    <string name="str_nexto">ข้าม</string>
    <string name="str_save">บันทึก</string>
    <string name="txtlogin">เข้าสู่ระบบ</string>
    <string name="save_success">บันทึกเสร็จสิ้น</string>
    <string name="txt_print">พิมพ์</string>
    <string name="msg_connect_internet">\nตรวจสอบการเชื่อมต่ออินเตอร์เน็ต\n</string>


    <!--M-->
    <string name="text_no_net">เชื่อมต่ออินเตอร์เน็ต</string>
    <string name="text_action">รับทราบ</string>
    <string name="title_menu_lFast">แทงด่วน</string>
    <string name="title_menu_lNoN">หน้าบน</string>
    <string name="title_menu_lSpec">พิเศษ</string>
    <string name="title_menu_lMore">เพิ่มเติม</string>
    <string name="txt_lot_type_th">หวยรัฐบาล</string>
    <string name="txt_lot_type_lao">หวยลาว</string>
    <string name="txt_lot_type_mala">หวยมาเลย์</string>
    <string name="txt_lot_type_hun_th1">หุ้นไทย(เช้า)</string>
    <string name="txt_lot_type_hun_th2">หุ้นไทย(เที่ยง)</string>
    <string name="txt_lot_type_hun_th3">หุ้นไทย(บ่าย)</string>
    <string name="txt_lot_type_hun_th4">หุ้นไทย(เย็น)</string>
    <string name="txt_lot_type_hun_nikaai1">หุ้นนิเคอิ(เช้า)</string>
    <string name="txt_lot_type_hun_nikaai2">หุ้นนิเคอิ(เที่ยง)</string>
    <string name="txt_lot_type_hun_hungseng1">หุ้นฮังเส็ง(เช้า)</string>
    <string name="txt_lot_type_hun_hungseng2">หุ้นฮังเส็ง(เที่ยง)</string>
    <string name="txt_lot_type_hun_dow_jon">หุ้นดาวโจนส์</string>
    <string name="txt_lot_type_hun_singapore">หุ้นสิงคโปร์</string>
    <string name="txt_lot_type_hun_egypt">หุ้นอียิปต์</string>
    <string name="txt_lot_type_hun_russia">หุ้นรัสเซีย</string>
    <string name="txt_lot_type_hun_german">หุ้นเยอรมัน</string>
    <string name="txt_lot_type_hun_eng">หุ้นอังกฤษ</string>
    <string name="title_username">ผู้เล่น</string>
    <string name="title_credit">เครดิต</string>
    <string name="title_rob">รอบ</string>
    <string name="title_time">เวลา</string>
    <string name="title_lesson">งวด : </string>
    <string name="title_close_lesson">ปิดรับ : </string>
    <string name="title_close_lot">ปิดรับแทงแล้ว</string>
    <string name="title_print_lot">บันทึก</string>
    <string name="txt_back_lot">กลับ</string>
    <string name="txt_price_data_lot">ราคา</string>
    <string name="title_eque_tang">=</string>
    <string name="text_title_threeon">บน</string>
    <string name="text_title_threetod">โต๊ด</string>
    <string name="text_title_id_poy">โพยที่ : </string>
    <string name="text_title_name_poy">ชื่อ : </string>
    <string name="text_title_threedown">ล่าง</string>
    <string name="text_title_non_on">หน้าบน</string>
    <string name="text_title_non_down">หน้าล่าง</string>
    <string name="text_title_non_tod">หน้าโต๊ด</string>
    <string name="title_num_tang">เลข</string>
    <string name="text_title_copy">คัดลอก</string>
    <string name="title_yes">ใช่</string>
    <string name="title_no">ไม่ใช่</string>
    <string name="txt_num_3in5">3ใน5</string>
    <string name="txt_num_3in4">3ใน4</string>
    <string name="txt_num_2in3">2โต๊ด</string>
    <string name="txt_num_19hang">19 หาง</string>
    <string name="txt_type_lot_select">ประเภทหวย</string>
    <string name="title_logout">ออกจากระบบ</string>
    <string name="title_news">ประเภทหวย</string>
    <string name="title_list_play">รายการเล่น</string>
    <string name="title_select_printer">เครื่องพิมพ์</string>
    <string name="title_cancel">ยกเลิก</string>
    <string name="txt_status_loading">กำลังโหลด...</string>
    <string name="txt_no_date_bill">-- งวดวันที่ --</string>
    <string name="txt_view_one_list_play">รายบิล</string>
    <string name="txt_view_two_list_play">ทั้งหมด</string>
    <string name="title_header_bill_date">วันที่ : </string>
    <string name="title_header_bill_time">เวลา :  </string>
    <string name="title_header_bill_id">รหัสบิล :  </string>
    <string name="title_header_bill_yod">ยอดซื้อ : </string>
    <string name="title_header_bill_cancel"><u>ยกเลิก</u></string>
    <string name="title_header_bill_sub">ส่วนลด : </string>
    <string name="title_header_bill_pay">ยอดซื้อ</string>
    <string name="title_header_bill_dis">ส่วนลด</string>
    <string name="title_header_bill_win">ยอดที่ถูก</string>
    <string name="title_header_bill_total">ยอดสุทธิ</string>
    <string name="title_header_bill_all_num">เลข</string>
    <string name="title_header_bill_all_price">จำนวน</string>
    <string name="title_header_bill_all_sub">ส่วนลด</string>
    <string name="title_header_bill_all_total">สุทธิ</string>
    <string name="txt_title_total_bill">รวม</string>
    <string name="txt_title_totals_bill">สรุปยอด</string>
    <string name="txt_date_more">โหลดเพิ่มเติม</string>
    <string name="txt_sea_printer">ค้นหา</string>
    <string name="txt_close_printer">ปิดเครื่องพิมพ์</string>
    <string name="txt_name_printer_connected">อุปกรณ์ที่เชื่อมต่อ</string>
    <string name="txt_title_paper_printer">กระดาษ : </string>
    <string name="txt_title_name_printer">รายชื่ออุปกรณ์</string>
    <string name="txt_paper_3">3 นิ้ว</string>
    <string name="txt_paper_2">2 นิ้ว</string>
    <string name="txt_searching_name_printer">กำลังค้นหา...</string>
    <string name="txt_connecting_printer">กำลังเชื่อมต่อเครื่องพิมพ์...</string>
    <string name="txt_connected_printer">เชื่อมต่อเครื่องพิมพ์แล้ว</string>
    <string name="txt_no_connect_printer">ไม่ได้เชื่อมต่อเครื่องพิมพ์</string>
    <string name="txt_title_lot_full">เต็ม</string>
    <string name="txt_alert_select_user">กรุณาเลือกผู้เล่น</string>
    <string name="txt_alert_input_data">กรุณากรอกข้อมูล</string>
    <string name="txt_alert_no_cancel_bill">ไม่สามารถยกเลิกบิลได้</string>
    <string name="txt_alert_enter_min">แทงขั้นต่ำ</string>
    <string name="txt_alert_enter_max">สูงสุด</string>
    <string name="txt_cancel_bill">ต้องการยกเลิกบิลใช่หรือไม่</string>
    <string name="text_save_successful">บันทึกรายการสำเร็จ</string>
    <string name="txt_alert_exit_app">กดอีกครั้งเพื่อออกจากแอพ</string>
    <string name="txt_version_app">V.4</string>
    <string name="return_number">กลับ</string>
    <string name="number_full">เลขเต็ม</string>
    <string name="printer_text">เครื่องพิมพ์</string>
    <string name="want_text_message">ต้องการใช้สิทธิ์การเข้าถึง</string>
    <string name="worktextmessage">เพื่อการทำงานที่สมบูรณ์</string>

</resources>
