<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin5">
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_edit"
                android:background="@drawable/bg_number_edit"
                android:textColor="@color/colorblack"
                android:gravity="center"
                android:textSize="@dimen/size_txt_save"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/btn_Nexto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_next"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin1"
                android:layout_marginLeft="@dimen/margin1"
                android:textSize="@dimen/size_txt_save"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/bt_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="LogOut"
                android:gravity="center"
                android:textSize="@dimen/size_txt_save"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/bt_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="7"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/bt_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="8"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin1"
                android:layout_marginLeft="@dimen/margin1"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/bt_nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="9"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/bt_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="4"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin1"/>
            <TextView
                android:id="@+id/bt_file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="5"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin1"
                android:layout_marginLeft="@dimen/margin1"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin1"/>
            <TextView
                android:id="@+id/bt_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/bt_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="1"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin1"/>
            <TextView
                android:id="@+id/bt_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:layout_marginRight="@dimen/margin1"
                android:layout_marginLeft="@dimen/margin1"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin1"/>
            <TextView
                android:id="@+id/bt_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="3"
                android:gravity="center"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/margin1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/bt_Left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ถัดไป"
                android:gravity="center"
                android:textSize="@dimen/text_size30"
                android:background="@drawable/bg_number_nextto"
                android:layout_weight="1"
                android:textColor="@color/colorblack"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/bt_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin1"
                android:layout_marginLeft="@dimen/margin1"
                android:textSize="@dimen/magin_size50"
                android:background="@drawable/bg_menu"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/bt_Right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_menu"
                android:gravity="center"
                android:text="@string/textadd"
                android:textSize="@dimen/magin_size50" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin1">
            <TextView
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_edit"
                android:textColor="@color/colorblack"
                android:background="@drawable/bg_number_edit"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/size_txt_save"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txtlogin"
                android:layout_marginLeft="@dimen/margin1"
                android:gravity="center"
                android:textSize="@dimen/size_txt_save"
                android:textColor="@color/colorblack"
                android:background="@drawable/bg_number_enter"
                android:layout_weight="1"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>